deployment/kubernetes/background-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: background-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: background
  template:
    metadata:
      labels:
        app: background
    spec:
      containers:
        - name: background
          image: danswer/danswer-backend:latest
          imagePullPolicy: IfNotPresent
          command:
            [
              "/usr/bin/supervisord",
              "-c",
              "/etc/supervisor/conf.d/supervisord.conf",
            ]
          # Existing environment variables
          volumeMounts:
            - name: my-ca-cert-volume
              mountPath: /etc/ssl/certs/my-ca.crt
              subPath: my-ca.crt
      # Optional volume for CA certificate
      volumes:
        - name: my-ca-cert-volume
          secret:
            secretName: my-ca-cert
            items:
              - key: my-ca.crt
                path: my-ca.crt
