deployment/kubernetes/api_server-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server-service
spec:
  selector:
    app: api-server
  ports:
    - name: api-server-port
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
        - name: api-server
          image: danswer/danswer-backend:latest
          imagePullPolicy: IfNotPresent
          command:
            - "/bin/sh"
            - "-c"
            - |
              if [ -f /usr/local/share/ca-certificates/my-ca.crt ]; then
                update-ca-certificates;
              fi &&
              alembic upgrade head &&
              echo "Starting Danswer Api Server" &&
              uvicorn danswer.main:app --host 0.0.0.0 --port 8080
          ports:
            - containerPort: 8080
          # Existing environment variables
          volumeMounts:
            - name: my-ca-cert-volume
              mountPath: /etc/ssl/certs/my-ca.crt
              subPath: my-ca.crt
      # Optional volume for CA certificate
      volumes:
        - name: my-ca-cert-volume
          secret:
            secretName: my-ca-cert
            items:
              - key: my-ca.crt
                path: my-ca.crt
