deployment/kubernetes/qdrant-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: vector-db-service
spec:
  selector:
    app: qdrant
  ports:
    - name: qdrant-port
      protocol: TCP
      port: 6333
      targetPort: 6333
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qdrant-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qdrant
  template:
    metadata:
      labels:
        app: qdrant
    spec:
      containers:
      - name: qdrant
        image: qdrant/qdrant:v1.1.3
        ports:
        - containerPort: 6333
        volumeMounts:
        - name: qdrant-storage
          mountPath: /qdrant/storage
      volumes:
      - name: qdrant-storage
        persistentVolumeClaim:
          claimName: qdrant-pvc
