deployment/kubernetes/slackbot-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-bot-deployment
  labels:
    app: slack-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-bot
  template:
    metadata:
      labels:
        app: slack-bot
    spec:
      containers:
        - name: slack-bot
          image: danswer/danswer-backend:latest
          imagePullPolicy: IfNotPresent
          command: ["python", "danswer/danswerbot/slack/listener.py"]
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
          readinessProbe:
            httpGet:
              path: /metrics
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /metrics
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: slack-bot-service
  labels:
    app: slack-bot
spec:
  selector:
    app: slack-bot
  ports:
    # Port exposed for Prometheus metrics
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
