deployment/kubernetes/typesense-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-engine-service
spec:
  selector:
    app: typesense
  ports:
    - name: typesense-port
      protocol: TCP
      port: 8108
      targetPort: 8108
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: typesense-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: typesense
  template:
    metadata:
      labels:
        app: typesense
    spec:
      containers:
      - name: typesense
        image: typesense/typesense:0.24.1
        ports:
        - containerPort: 8108
        volumeMounts:
        - name: typesense-storage
          mountPath: /typesense/storage
      volumes:
      - name: typesense-storage
        persistentVolumeClaim:
          claimName: typesense-pvc
