deployment/kubernetes/web_server-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
spec:
  selector:
    app: web-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - name: web-server
        image: public.ecr.aws/s0d3n4f3/buddy-danswer/web:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        # There are some extra values since this is shared between services
        # There are no conflicts though, extra env variables are simply ignored
